# UV-map-morphing

./: CMakeLists.txt  README.md  commandLine.txt  compile copy.bat  compile.bat  environment.bat  hello.cpp  hello.js  hello.wasm  index.html  linearTransform.cpp  linearTransform.h  main.css  main.js  main_wasm.data  main_wasm.js  main_wasm.wasm  mesh.cpp  mesh.h  old_compile copy.bat  package-lock.json  quatTranform.cpp  quatTranform.h  quatTransform.h
cpp/src/: arap.h  dualQuatHomTransform.cpp  dualQuatHomTransform.h  dualQuatTransform.cpp  dualQuatTransform.h  hello.cpp  homothety.cpp  homothety.h  linearTransform.cpp  linearTransform.h  mesh.cpp  mesh.h  quatTransform.cpp  quatTransform.h  smartTransform.cpp  smartTransform.h  testTransform.cpp  testTransform.h  utils.h  z_Old.cpp
cpp_src/: CMakeLists.txt  hello.cpp  mesh.cpp  mesh.h
res/baking/: BakerHouse_Models_Barrel.FBX1010011no.txt  simpleMeshes_cubeCross.obj1010010no.txt  simpleMeshes_cubeCross.obj1010010u.txt  simpleMeshes_cubeCross.obj1010011no.txt
res/models/9mm_cartridge/: 9mm_cartridge.glb
res/models/BakerHouse/: Scene.unity
res/models/acorn/: acorn.glb
res/models/anvil/: anvil.glb
res/models/apple/: apple.glb
res/models/cannon_with_base/: cannon_with_base.glb
res/models/cartoon_bomb/: cartoon_bomb.glb
res/models/crystal/: crystal.glb
res/models/cube/: #cylSimple.wings#
res/models/d20_dice/: d20_dice.glb
res/models/goblet_03/: goblet_03.fbx  goblet_03.glb
res/shaders/: customFrag.glsl  customVert.glsl  threeDefaultFrag.glsl
thesis/: presentazione_Sepe_Giorgio.pptx
(+14 files in other folders)
